# wglib

./: README.md  dune-project  flake.nix
lib/: dune  socket.ml  wgapi.ml  wgapi.mli  wireguard.c  wireguard.h  wireguard.ml
lib/libwireguard/: Makefile  test  wireguard.c  wireguard.h
test/: dune
